fix: [FFM-2184]: ensure git sync toolbar aligns to the left (#7076)

--- a/src/modules/75-cf/pages/feature-flags/FeatureFlagsPage.module.scss
+++ b/src/modules/75-cf/pages/feature-flags/FeatureFlagsPage.module.scss
@@ -57,3 +57,9 @@
     padding-top: 12px;
   }
 }
+
+.leftToolbar {
+  display: flex;
+  gap: var(--spacing-medium);
+  align-items: center;
+}
